Added descriptions for Outside the Classroom as well as made the menu bar present on all pages

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ a{
     text-decoration: none;
     color:black;
     text-transform:uppercase;
-    font-family: sans-serif;
+    font-family:cursive
     display:block;
     width: 150px;
     text-align: center;
@@ -31,11 +31,10 @@ ul{
 section{
     width: 63%;
     float: right;
-    padding: 0 20px;
 }
 
 aside{
     width: 37%;
-    float: left;
-    padding: 0 20px;
+    float: center;
+    padding: 20px
 }
