--- a/style.css
+++ b/style.css
@@ -1,6 +1,34 @@
 *{
     box-sizing: border-box;
 }
+        .column{
+            float: left;
+            width: 50%;
+            text-align: center;
+            font-size: 2.5vw;
+        }
+
+        .columnAnimation{
+            float: left;
+            width: 50%;
+            text-align: center;
+            font-size: 1vw;
+}
+         .columnr{
+            float: left;
+            width: 50%;
+            padding-left: 50px;
+            height: 600px;
+            font-size: 2.5vw;
+            text-align: center;
+        }
+        
+        .row:after{
+            content: "";
+            display: table;
+            clear: both;
+        }
+
 a{
     text-decoration: none;
     color:black;
@@ -20,6 +48,7 @@ hr{
     border-style: dashed;
     color: #34afe0;
     text-align: center;
+    margin-bottom: 30px;
 }
 
 a:hover{
@@ -31,10 +60,14 @@ a:hover{
 }
 
 .main{
-    width:80%;
+    width:50%;
     min-width: 300px;
     margin: 0 auto;
     display: block;
+}
+
+.img{
+    height: 250px;
 }
 
 ul{
@@ -43,16 +76,12 @@ ul{
 
 .nav{
     display:inline-block;
-}
-
-.column{
-    font-size: 30px;
-    text-align: center;
-    padding: 0 20px;
+    align-content: center;
 }
 
 .drawings{
     text-align: center;
+    
 }
 
 .otc{
